[package]
name = "foo"
version = "1.19.1"
authors = ["Canal TP <dt.ro@canaltp.fr>"]
autotests = false
edition = "2018"
description = "Set of tools for geocoding with Elasticsearch"
license = "AGPLv3"
repository = "https://github.com/CanalTP/mimirsbrunn.git"
keywords = [ "mimirsbrunn", "elasticsearch", "geocoding" ]
categories = [ "application" ]
readme = "README.md"

[workspace]

[dependencies]
log = { version = "0.4", features = ["release_max_level_debug"] }
slog = { version = "2.5", features = ["max_level_trace", "release_max_level_debug"]}
slog-scope = "4.3"
slog-envlogger = "2.2"
slog-async = "2.5"
slog-term = "2.8"
slog-stdlog = "4.1"
